--- a/template/insert.html
+++ b/template/insert.html
@@ -303,7 +303,7 @@
                             <p class="text-sm text-coolGray-800 font-semibold">Lokasi</p>
                           </div>
                           <div class="w-full md:flex-1 p-3">
-                            <input id="location"" class="w-full px-4 py-2.5 text-base text-coolGray-900 font-normal outline-none focus:border-green-500 border border-coolGray-200 rounded-lg shadow-input" type="text" placeholder="Lokasi">
+                            <input id="location" class="w-full px-4 py-2.5 text-base text-coolGray-900 font-normal outline-none focus:border-green-500 border border-coolGray-200 rounded-lg shadow-input" type="text" placeholder="Lokasi">
                           </div>
                         </div>
                       </div>
@@ -387,7 +387,7 @@
                             <p class="text-sm text-coolGray-800 font-semibold">Durasi Kerja</p>
                           </div>
                           <div class="w-full md:w-1/3 p-3">
-                            <input
+                            <input 
                               id="durasi"
                               class="w-full px-4 py-2.5 text-base text-coolGray-900 font-normal outline-none focus:border-green-500 border border-coolGray-200 rounded-lg shadow-input"
                               type="text"
